10674049 - 'offices & places Update'

--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/officers/officers-list/officers-list.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/officers/officers-list/officers-list.component.html
@@ -19,13 +19,9 @@
           </mat-grid-tile>
           <mat-grid-tile>
               <mat-label>
-              Username:  {{officer.userName}}
-                <br>
               Email: {{officer.email}}
                 <br>
-              Name: {{officer.firstName}} {{officer.lastName}}
-                <br>
-              Phone Number: {{officer.phone}}
+              Name: {{officer.firstName}}
                 <br>
               City: {{officer.city}}
               </mat-label>
@@ -54,14 +50,10 @@
             </div>
           </mat-grid-tile>
           <mat-grid-tile>
-              <mat-label>
-              Username:  {{officer.userName}}
-                <br>
+            <mat-label>
               Email: {{officer.email}}
                 <br>
-              Name: {{officer.firstName}} {{officer.lastName}}
-                <br>
-              Phone Number: {{officer.phone}}
+              Name: {{officer.firstName}}
                 <br>
               City: {{officer.city}}
               </mat-label>
