--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/place-create/place-create.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/place-create/place-create.component.html
@@ -68,7 +68,7 @@
     <br>
     <br>
    <div class="button">
-      <button type="submit" mat-stroked-button  style="width: 100%; color: green;" [disabled]="!createAgentForm.valid">Create User</button>
+      <button type="submit" mat-stroked-button  style="width: 100%; color: green;" [disabled]="!createAgentForm.valid">Add New Place</button>
    </div>
     <br>
     <div class="button">
