--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/qr-generation/qr-generation.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/qr-generation/qr-generation.component.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions style="margin-bottom: 2px; float: right;">
   <button mat-button (click)="saveAsImage(parent)">Download Code</button>
-  <button mat-button (click)="close(parent)" cdkFocusInitial>Ok</button>
+  <button mat-button (click)="close()" cdkFocusInitial>Ok</button>
 </div>
