--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/app.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <app-header></app-header> -->
-
+<!-- {{ message | async | json }} -->
+<!-- {{ message | async | json }} -->
 <main>
   <router-outlet></router-outlet>
 </main>
