--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/shared/components/header/header.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/shared/components/header/header.component.html
@@ -9,8 +9,10 @@
         <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
             <ul fxLayout="row" fxLayoutGap="20px">
                 <li>
-                    <button mat-icon-button>
-                        <mat-icon>settings</mat-icon>
+                    <!-- <button mat-raised-button (click)="openDialog()">Open Dialog</button> -->
+                    <!-- <button mat-icon-button> -->
+                        <button mat-icon-button (click)="openDialog()">
+                        <mat-icon >message</mat-icon>
                     </button>
                 </li>
 
