--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/modules/dashboard/dashboard.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/modules/dashboard/dashboard.component.html
@@ -154,7 +154,7 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
 
-            <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator> -->
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
         </div>
 
     </div>
