10673333 - Angular some changes

--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/modules/dashboard/dashboard.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/modules/dashboard/dashboard.component.html
@@ -163,11 +163,34 @@
     </div>
 </div>
 
-<br>
-<br>
-<br>
+
 <br>
 <mat-divider></mat-divider>
+<br>
+
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" style="margin-left: 50px;">
+    <div>
+        <h1> Sri Lanka Traveller View</h1>
+        <img style="height: 700px;float: left;" src="../../../../assets/destination-map-sri-lanka.png" alt="">
+    
+        <img style="height: 700px;float: right;" src="../../../../assets/moh_area_map.jpg" alt="">
+        <br>
+    </div>
+
+</div>
+<br>
+<mat-divider></mat-divider>
+
+
+
+<!-- <div>
+    <h3 style="background-color: brown;width: 500px;">Level 4: COVID-19 Very High</h3>
+    <ul>COVID-19 in Isle of Man <br> <h5>April 02, 2021</h5><h5>Travelers should avoid all travel to Isle of Man.</h5></ul>
+    <ul>COVID-19 in the Sri Lanka</ul>
+</div>
+
+ -->
+
 
 <!-- <h1 style="font-weight: 500;">Travel and COVID-19</h1>
 <h3 style="font-weight: 400;">Travel increases your chance of getting and spreading COVID-19. Stay home to protect
@@ -202,7 +225,3 @@
     and community after your travel.</h3>
 
 <h2 style="font-weight: 400;">Get Tested and Stay Home After Travel</h2> -->
-
-<mat-divider>
-
-</mat-divider>
