--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/qr-generation/qr-generation.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/qr-generation/qr-generation.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Your QR Code is:</h1>
 <div mat-dialog-content style="display: flex; justify-content: center;">
-  <qrcode #parent [qrdata]="data.QRcode" [size]="250"></qrcode>
+  <qrcode #parent [qrdata]="data.uid" [size]="250"></qrcode>
 </div>
 <div mat-dialog-actions style="margin-bottom: 2px; float: right;">
   <button mat-button (click)="saveAsImage(parent)">Download Code</button>
