10673936 - Client -side - angular App

--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/app.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-header></app-header> -->
 <!-- {{ message | async | json }} -->
 <!-- {{ message | async | json }} -->
+<app-header></app-header>
+
 <main>
   <router-outlet></router-outlet>
 </main>
