--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/header/header.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/header/header.component.html
@@ -10,6 +10,9 @@
     <li >
       <a mat-button routerLink="/profile" routerLinkActive="mat-accent">Officer Info</a>
     </li>
+    <li >
+      <a mat-button routerLink="/citizen-profile" routerLinkActive="mat-accent">Citizen Profile</a>
+    </li>
     </ul>
     <span class="giveSpace"></span>
     <ul>
