--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/health-inspection/citizen-view/status-change/status-change.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/health-inspection/citizen-view/status-change/status-change.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Do you want to udpate the Potential Infected Citizens ?</h2>
 <mat-dialog-content class="mat-typography">
-  <h3>Do you want to udpate the Potential Infected Citizens ?</h3>
+  <h3>Do you want to update the Potential Infected Citizens ?</h3>
   <p>Clicking "Ok" will direct you to ta list of potential Citizens who came in contact with the current updated user</p>
 
 </mat-dialog-content>
